# starter-kit-python-poetry

./: README.md  pyproject.toml
.github/workflows/: build.yml  codeql-analysis.yml
starter_kit/: starter_kit.py
tests/: test_starter_kit.py
