[tool.poetry]
name = "starter_kit"
version = "0.1.0"
description = ""
authors = ["Huy Vuong <huy-vuong@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pyright = "^1.1.327"
black = "^22.1"
coverage = "^6.3"

[tool.poetry.scripts]
starter_kit = "starter_kit.starter_kit:main"

[tool.pyright]
include = ["starter_kit", "tests"]
pythonVersion = "3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
